# Garyou_Tensei_Player

./: README.md  app.py  config.toml  config_loader.py  mkdocs.yml  mpd_observer.py  pyproject.toml
docs/: index.md
docs/stylesheets/: extra.css
gtp/: config_loader.py  extract_cover.py  mpd_client.py
