[tool.poetry]
name = "garyou-tensei-player"
version = "0.1.0"
description = "A feature-rich TUI client for MPD"
authors = ["Mateus Ryu Yamaguchi <mateus.ryu8@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.13.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.32"
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
